--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 	    padding: 12px;
 	    background: #424242;
 	    color: #E0E0E0;
+	    padding-left:135px;
 	}
 	.container{
 		margin: 0 auto;
 		padding: 15px;
-		max-width: 786px;
+		max-width: 1000px;
 		background: #eee;
 	}
 	.fields-container{
@@ -89,9 +90,6 @@
 		color: #333;
 
 	}
-	.pull-left{
-		float: left;
-	}
 	.save{
 		display: block;
 		padding: 4px 8px;
@@ -102,6 +100,7 @@
 	@media screen and (max-width: 500px){
 		.header{
 			text-align: center;
+			padding-left: 12px;
 		}
 	}
 	</style>
