--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 	.header {
 	    height: 50px;
 	    font-size: 25px;
-	    width: 100%;
-	    padding: 12px;
+	    max-width: 1000px;
+	    padding: 15px;
 	    background: #424242;
 	    color: #E0E0E0;
-	    padding-left:135px;
+	    margin: 0 auto;
 	}
 	.container{
 		margin: 0 auto;
